--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:7.2-fpm
 
+ENV PHPFPM_PORT=${DEVSTACK_PHPFPM_PORT}
+
 COPY conf/www.conf /usr/local/etc/php-fpm.d
 COPY conf/zz-docker.conf /usr/local/etc/php-fpm.d
 COPY conf/php.ini /usr/local/etc/php
