--- a/apache/conf/php-fpm.conf
+++ b/apache/conf/php-fpm.conf
@@ -3,6 +3,6 @@
         #SetHandler "proxy:unix:/var/run/php/php7.2-fpm.sock|fcgi://localhost/"
  
         # Else we can just use a tcp socket:
-        SetHandler "proxy:fcgi://php:9000"
+        SetHandler "proxy:fcgi://php:${PHPFPM_PORT}"
         #SetHandler "proxy:fcgi://localhost:9000"
     </FilesMatch>
