--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,11 +1,21 @@
 FROM php:7.2-fpm
+ARG XDEBUG_REMOTEIP
+ARG XDEBUG_IDEKEY
+#ENV PHPFPM_PORT ${DEVSTACK_PHPFPM_PORT2}
+#ENV XDEBUG_PORT ${DEVSTACK_XDEBUG_PORT}
+#ENV XDEBUG_IDEKEY ${DEVSTACK_XDEBUG_IDEKEY}
+#ENV XDEBUG_REMOTEIP ${DEVSTACK_XDEBUG_REMOTEIP}
 
-ENV PHPFPM_PORT=${DEVSTACK_PHPFPM_PORT}
 
 COPY conf/www.conf /usr/local/etc/php-fpm.d
 COPY conf/zz-docker.conf /usr/local/etc/php-fpm.d
 COPY conf/php.ini /usr/local/etc/php
 
-
-#RUN pecl install xdebug-2.6.0 \
-#    && docker-php-ext-enable xdebug
+RUN echo "${XDEBUG_REMOTEIP}"   
+RUN apt-get update \
+    && pecl install xdebug \
+    && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.remote_host=${XDEBUG_REMOTEIP}">> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.idekey=${XDEBUG_IDEKEY}">> /usr/local/etc/php/conf.d/xdebug.ini
