--- a/mailhog/service.mail.yml
+++ b/mailhog/service.mail.yml
@@ -7,6 +7,7 @@ services:
       - mailhog
   mailhog:
     image: mailhog/mailhog
+    container_name: ds_mailhog
     ports: 
       - 1025:1025 # smtp server
       - 8025:8025 # web ui
