--- a/db/db.pgsql.yml
+++ b/db/db.pgsql.yml
@@ -2,7 +2,7 @@ version: "2"
 services:
   db:
     image: postgres:9.6.7
-    container_name: ds_pssql
+    container_name: ds_pgsql
     restart: always
     environment:
       POSTGRES_PASSWORD: "bonimat"
