--- a/db/db.pgsql.yml
+++ b/db/db.pgsql.yml
@@ -8,6 +8,7 @@ services:
       POSTGRES_USER: matteo
       POSTGRES_PASSWORD: bonimat
       POSTGRES_DB: pgdb
-      PGDATA: $DS_PGDATA
     ports:
       - 5432:5432
+    volumes:
+      - $DS_PGDATA:/var/lib/postgresql/data
