--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -13,6 +13,11 @@ COPY conf/php.ini /usr/local/etc/php
 
 RUN echo "${XDEBUG_REMOTEIP}"   
 RUN apt-get update \
+    && apt-get install -y \
+        libzip-dev \
+        zip \
+    && docker-php-ext-configure zip --with-libzip \
+    && docker-php-ext-install zip \
     && pecl install xdebug \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
