Aggiunta cartella per i dati condivisi

--- a/base.yml
+++ b/base.yml
@@ -11,6 +11,7 @@ services:
       - '8445:443'
     volumes:
       - "${DEVSTACK_WWWROOT}:/var/www/html"
+      - "data:/data"
     links:
       - php-fpm
   php-fpm:
@@ -25,5 +26,6 @@ services:
     container_name: ds_php7.2-fpm
     volumes:
       - "${DEVSTACK_WWWROOT}:/var/www/html"
+      - "data:/data"
 
  
