--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -6,6 +6,9 @@ ARG XDEBUG_IDEKEY
 #ENV XDEBUG_IDEKEY ${DEVSTACK_XDEBUG_IDEKEY}
 #ENV XDEBUG_REMOTEIP ${DEVSTACK_XDEBUG_REMOTEIP}
 
+ADD setup /setup
+RUN chmod 777 /setup && chmod +t /setup
+RUN /setup/php-extensions.sh
 
 COPY conf/www.conf /usr/local/etc/php-fpm.d
 COPY conf/zz-docker.conf /usr/local/etc/php-fpm.d
@@ -13,11 +16,6 @@ COPY conf/php.ini /usr/local/etc/php
 
 RUN echo "${XDEBUG_REMOTEIP}"   
 RUN apt-get update \
-    && apt-get install -y \
-        libzip-dev \
-        zip \
-    && docker-php-ext-configure zip --with-libzip \
-    && docker-php-ext-install zip \
     && pecl install xdebug \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
