--- a/base.yml
+++ b/base.yml
@@ -24,6 +24,10 @@ services:
         XDEBUG_REMOTEIP : "${DEVSTACK_XDEBUG_REMOTEIP}"
         XDEBUG_IDEKEY : "${DEVSTACK_XDEBUG_IDEKEY}"
     container_name: ds_php7.2-fpm
+    ports:
+      - '1521:1521'
+      - '10386:10386'
+      - '10389:10389'
     volumes:
       - "${DEVSTACK_WWWROOT}:/var/www/html"
       - "./data:/data" 
