--- a/db/db.pgsql.yml
+++ b/db/db.pgsql.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   db:
-    image: postgres
+    image: postgres:11
     container_name: ds_pgsql
     restart: always
     environment:
