--- a/db/adminer.yml
+++ b/db/adminer.yml
@@ -3,7 +3,7 @@ version: "2"
 services:
   adminer:
     image: dockette/adminer:full
-    container_name: ds_adminer
+    container_name: ds_adminer${DEVSTACK_PREF_NAME}
     restart: always
     ports:
       - ${DEVSTACK_ADMINER_PORT}:80
