--- a/db/db.mysql.yml
+++ b/db/db.mysql.yml
@@ -2,7 +2,7 @@ version: "2"
 services:
   db:
     image: mysql:5
-    container_name: ds_mysql
+    container_name: ds_mysql${DEVSTACK_PREF_NAME}
     command: >
                 --character-set-server=utf8mb4
                 --collation-server=utf8mb4_bin
