--- a/base.yml
+++ b/base.yml
@@ -21,13 +21,14 @@ services:
     build: 
       context: ./php-fpm
       args:
-        XDEBUG_REMOTEIP : "${DEVSTACK_XDEBUG_REMOTEIP}"
-        XDEBUG_IDEKEY : "${DEVSTACK_XDEBUG_IDEKEY}"
-    container_name: ds_php-fpm
+        XDEBUG_REMOTEIP : ${DEVSTACK_XDEBUG_REMOTEIP}
+        XDEBUG_IDEKEY : ${DEVSTACK_XDEBUG_IDEKEY}
+    container_name: ds_php-fpm${DEVSTACK_PREF_NAME}
     ports:
       - '1521:1521'
       - '10386:10386'
       - '10389:10389'
+      - '9003:9004'
 
     volumes:
       - "${DEVSTACK_WWWROOT}:/var/www/html"
