--- a/base.yml
+++ b/base.yml
@@ -28,7 +28,7 @@ services:
       - '1521:1521'
       - '10386:10386'
       - '10389:10389'
-      - "${DEVSTACK_XDEBUG_PORT}:${DEVSTACK_XDEBUG_PORT}" 
+        #      - "${DEVSTACK_XDEBUG_PORT}:${DEVSTACK_XDEBUG_PORT}" 
     volumes:
       - "${DEVSTACK_WWWROOT}:/var/www/html"
       - "./data:/data" 
