--- a/php-fpm/conf/php.ini
+++ b/php-fpm/conf/php.ini
@@ -261,10 +261,11 @@ output_buffering = 4096
 ; Note: You need to use zlib.output_handler instead of the standard
 ;   output_handler, or otherwise the output will be corrupted.
 ; http://php.net/zlib.output-compression
-zlib.output_compression = Off
+zlib.output_compression = On
 
 ; http://php.net/zlib.output-compression-level
 ;zlib.output_compression_level = -1
+zlib.output_compression_level = 6
 
 ; You cannot specify additional output handlers if zlib.output_compression
 ; is activated here. This setting does the same as output_handler but in
